# cfdb

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  KNOWN_GAPS.md  Makefile  README.md  cliff.toml
.baseline/: facts.sha256  (+2 more)
crates/cfdb-cli/: Cargo.toml
crates/cfdb-cli/src/: check.rs  check_predicate.rs  commands.rs  compose.rs  enrich.rs  error.rs  hir.rs  lang.rs  lib.rs  main.rs  main_command.rs  main_dispatch.rs  main_parse.rs  output.rs  param_resolver.rs  scope.rs  stubs.rs
crates/cfdb-cli/src/check/: t1.rs  t3.rs  tests.rs
crates/cfdb-cli/src/commands/: aux.rs  classify.rs  diff.rs  extract.rs  query.rs  rules.rs  tests.rs
crates/cfdb-cli/src/main_command/: args.rs
crates/cfdb-cli/src/scope/: classifier.rs  explain_sink.rs  helpers.rs
crates/cfdb-cli/tests/: arch_ban_utc_now.rs  arch_ban_utc_now_real_tree.rs  check_predicate_dogfood.rs  classifier_taxonomy.rs  classify_self_dogfood.rs  const_table_overlap.rs  diff_handler.rs  end_to_end.rs  exit_codes_violations.rs  extract_rev.rs  extract_rev_url.rs  extract_security.rs  ledger_canonical_bypass.rs  list_callers.rs  list_items_matching.rs  pattern_c_canonical_bypass.rs  predicate_library_dogfood.rs  scope.rs  self_dogfood_computed_key_evaluate.rs  self_dogfood_enrich_bounded_context.rs  self_dogfood_enrich_concepts.rs  self_dogfood_enrich_git_history.rs  self_dogfood_enrich_metrics.rs  self_dogfood_enrich_rfc_docs.rs  self_dogfood_persist_round_trip.rs  signature_divergent.rs  trigger_t1.rs  trigger_t3.rs  v02_9_bounded_context_accuracy.rs  wire_form_17_verbs.rs  wire_form_20_verbs.rs
crates/cfdb-concepts/: Cargo.toml
crates/cfdb-concepts/src/: lib.rs  published_language.rs
crates/cfdb-concepts/tests/: published_language.rs
crates/cfdb-extractor/: Cargo.toml
crates/cfdb-extractor-php/: Cargo.toml
crates/cfdb-extractor-php/src/: lib.rs
crates/cfdb-extractor-php/tests/: php_producer.rs
crates/cfdb-extractor-ts/: Cargo.toml
crates/cfdb-extractor-ts/src/: lib.rs
crates/cfdb-extractor-ts/tests/: typescript_producer.rs
crates/cfdb-extractor/src/: attrs.rs  call_visitor.rs  const_table.rs  context.rs  emitter.rs  file_walker.rs  item_visitor.rs  lib.rs  resolver.rs  synthesize.rs  type_render.rs
crates/cfdb-extractor/src/attrs/: tests.rs
crates/cfdb-extractor/src/const_table/: canonical.rs  mod.rs  recognize.rs
crates/cfdb-extractor/src/item_visitor/: emit.rs  parse_syn_visibility_tests.rs  visits.rs
crates/cfdb-extractor/tests/: architecture_dep_rule.rs  architecture_determinism.rs  const_table_emission.rs  field_emission.rs  fixture_extraction.rs  in_module_edge_emission.rs  param_emission.rs  published_language_dogfood.rs  returns_emission.rs  rust_producer.rs  self_dogfood_context_source.rs  self_workspace.rs  type_of_emission.rs  variant_emission.rs
crates/cfdb-hir-extractor/: Cargo.toml
crates/cfdb-hir-extractor/src/: call_site_emitter.rs  emit.rs  entry_point_emitter.rs  error.rs  hir_db.rs  lib.rs
crates/cfdb-hir-extractor/src/entry_point_emitter/: http_route.rs  other_kinds.rs  registers_param.rs
crates/cfdb-hir-extractor/tests/: arch_boundary.rs  callsite_line.rs  entry_point.rs  exclusion.rs  http_route.rs  resolved_dispatch.rs  v02_1_coverage.rs
crates/cfdb-hir-petgraph-adapter/: Cargo.toml
crates/cfdb-hir-petgraph-adapter/src/: lib.rs
crates/cfdb-hir-petgraph-adapter/tests/: arch_cli_isolation.rs  cfdb_self_dogfood.rs
crates/cfdb-petgraph/: Cargo.toml
crates/cfdb-petgraph/src/: canonical_dump.rs  enrich_backend.rs  explain.rs  graph.rs  graph_round_trip_tests.rs  lib.rs  persist.rs  tests.rs  with_indexes_tests.rs
crates/cfdb-petgraph/src/enrich/: bounded_context.rs  concepts.rs  git_history.rs  mod.rs  reachability.rs  rfc_docs.rs
crates/cfdb-petgraph/src/eval/: cross_match_tests.rs  edge_match_regression_tests.rs  explain_fmt.rs  fast_path_tests.rs  mod.rs  pattern.rs  predicate.rs  return_clause.rs  target_dogfood_tests.rs  util.rs  with_clause.rs
crates/cfdb-petgraph/src/index/: build.rs  lookup.rs  lookup_cross_match_tests.rs  lookup_tests.rs  mod.rs  posting.rs  spec.rs
crates/cfdb-petgraph/tests/: architecture_dep_rule.rs  hsb_cluster.rs  indexes_toml_self_dogfood.rs  legacy_context_source.rs  pattern_b_vertical_split_brain.rs  pattern_b_vertical_split_brain_drop.rs  persist_round_trip.rs  raid_plan_queries.rs  vsb_multi_resolver.rs
crates/cfdb-query/: Cargo.toml
crates/cfdb-query/src/: classify.rs  diff.rs  inventory.rs  lib.rs  list_items.rs  shape_lint.rs  skill_routing.rs
crates/cfdb-query/src/builder/: match_clause.rs  mod.rs  params.rs  projection.rs  where_clause.rs
crates/cfdb-query/src/parser/: expression.rs  lexical.rs  match_clause.rs  mod.rs  predicate.rs  projection.rs
crates/cfdb-query/tests/: architecture_dep_rule.rs  builder_parser_equivalence.rs  finding_no_skill_field.rs  parser_errors.rs  parser_patterns.rs  parser_string_escapes.rs  parser_subquery.rs  predicate_schema_refs.rs
crates/cfdb-recall/: Cargo.toml  recall-audit.txt
crates/cfdb-recall/src/: lib.rs  thresholds.rs
crates/cfdb-recall/src/adapters/: extractor.rs  ground_truth.rs  mod.rs
crates/cfdb-recall/tests/: architecture_dep_rule.rs  integration_recall.rs
studies/spike/ladybugdb/: Cargo.toml
studies/spike/ladybugdb/src/: main.rs
tools/check-prelude-triggers/: Cargo.toml  README.md
tools/check-prelude-triggers/_generated/: README.md  c1.json  c3.json  c7.json  c8.json  c9.json
tools/check-prelude-triggers/src/: lib.rs  main.rs  report.rs  toml_io.rs  trigger_id.rs
tools/check-prelude-triggers/src/triggers/: c1_cross_context.rs  c3_port_signature.rs  c7_financial_precision.rs  c8_pipeline_stage.rs  c9_workspace_cardinality.rs  mod.rs
tools/check-prelude-triggers/tests/: require_fresh.rs
tools/dogfood-enrich/: Cargo.toml  README.md
tools/dogfood-enrich/src/: count_items.rs  feature_guard.rs  grep_deprecated.rs  grep_rfc_docs.rs  lib.rs  main.rs  passes.rs  runner.rs  scan_concepts.rs  thresholds.rs
tools/dogfood-enrich/tests/: cli_contract.rs  self_enrich_bounded_context_fixture.rs  self_enrich_deprecation_fixture.rs
(+446 files in other folders)
