[package]
name = "cfdb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cfdb"
path = "src/main.rs"

[dependencies]
cfdb-core = { path = "../cfdb-core" }
cfdb-concepts = { path = "../cfdb-concepts" }
cfdb-query = { path = "../cfdb-query" }
cfdb-petgraph = { path = "../cfdb-petgraph" }
# RFC-041 Phase 1 / Slice 41-C — `cfdb-lang` defines the
# `LanguageProducer` trait that `crate::lang::available_producers()`
# dispatches through. Unconditional dep — the trait is an inner-ring
# port that every CLI build needs (the slim build still uses the
# trait surface even when no producer is compiled in).
cfdb-lang = { path = "../cfdb-lang" }
# `cfdb-extractor` is the concrete Rust producer (`RustProducer` per
# RFC-041 §3.3); `lang-rust` gates it. The `dep:` prefix is
# load-bearing under resolver v2 — without it, the bare name in the
# `[features]` block enables a *feature named `cfdb-extractor`* on
# any dep that exposes one, NOT the optional dep itself, and the
# slim build (`--no-default-features`) would still pull in
# `cfdb-extractor`'s `syn` / `cargo_metadata` transitives.
cfdb-extractor = { path = "../cfdb-extractor", optional = true }
# RFC-041 Phase 2 (#264) — PHP `LanguageProducer`. Optional dep gated
# behind `lang-php`; default-off so the slim build's anti-bloat
# guarantee carries forward (no tree-sitter / tree-sitter-php in the
# default dep tree).
cfdb-extractor-php = { path = "../cfdb-extractor-php", optional = true }
# RFC-041 Phase 3 (#265) — TypeScript `LanguageProducer`. Optional dep
# gated behind `lang-typescript`; same anti-bloat rationale as the
# PHP slot above. Both producers share tree-sitter 0.23 in the dep
# graph — see `crates/cfdb-extractor-{php,ts}/Cargo.toml` for the
# pinning rationale.
cfdb-extractor-ts = { path = "../cfdb-extractor-ts", optional = true }
clap.workspace = true
# `check_predicate::{PredicateRunReport, PredicateRow}` derive Serialize for
# `--format json` output. RFC-034 §3.1 Slice 3 / #147.
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# `param_resolver::ParamResolveError::Toml` carries `Box<toml::de::Error>`
# per RFC-034 §3.1 mirror-of-cfdb_concepts-shape. Slice 1 / #145.
toml.workspace = true
# `cfdb extract --rev <sha>` (issue #37 / slice `--rev`) creates a
# temporary git worktree to extract against an arbitrary commit.
# `tempfile` is stdlib-adjacent and already pulled in via `dev-dependencies`
# of neighbouring crates; promoting to a runtime dep here costs nothing.
tempfile.workspace = true
# `cfdb extract --rev <url>@<sha>` (issue #96 / RFC-032 §A1.7) hashes
# the URL into a stable 16-hex cache-key under `$CFDB_CACHE_DIR` (or
# `$XDG_CACHE_HOME/cfdb/extract` / `$HOME/.cache/cfdb/extract`).
sha2.workspace = true

# Optional HIR pipeline (Issue #86 / slice 4). Gated behind the
# `hir` feature so default builds do NOT pay the 90-150s `ra-ap-*`
# cold compile cost (RFC-032 §3 lines 221–227). `cargo build -p
# cfdb-cli` default-features MUST have zero ra-ap-* in its dep
# tree. `cargo build -p cfdb-cli --features hir` opts in.
cfdb-hir-extractor = { path = "../cfdb-hir-extractor", optional = true }
cfdb-hir-petgraph-adapter = { path = "../cfdb-hir-petgraph-adapter", optional = true }

[features]
default = ["lang-rust"]
# RFC-041 Phase 1 / Slice 41-C — gates the Rust `LanguageProducer`
# (`cfdb_extractor::RustProducer`). Default-on preserves backward-
# compat for every existing consumer (`cargo install cfdb-cli`
# behaves unchanged). Slim build (`cargo install cfdb-cli
# --no-default-features`) drops `cfdb-extractor` and its `syn` /
# `cargo_metadata` transitives entirely; the CLI's `extract` verb
# returns `NoProducerDetected` cleanly at runtime in that build.
# Future languages add `lang-php = ["dep:cfdb-extractor-php"]`,
# `lang-typescript = ["dep:cfdb-extractor-ts"]` on the same pattern.
lang-rust = ["dep:cfdb-extractor"]
# RFC-041 Phase 2 (#264) — PHP `LanguageProducer`. Default-off; opt-in
# via `cargo install cfdb-cli --features lang-php`. Pulls
# `tree-sitter` + `tree-sitter-php` only when this feature is on.
lang-php = ["dep:cfdb-extractor-php"]
# RFC-041 Phase 3 (#265) — TypeScript `LanguageProducer`. Default-off;
# opt-in via `--features lang-typescript`. Pulls `tree-sitter` +
# `tree-sitter-typescript` only when on.
lang-typescript = ["dep:cfdb-extractor-ts"]
# Enables `cfdb extract --hir` — pulls HIR pipeline crates.
hir = ["dep:cfdb-hir-extractor", "dep:cfdb-hir-petgraph-adapter"]
# Enables `cfdb enrich-git-history` real implementation — pulls libgit2 via
# `git2`. Default builds (`cargo build -p cfdb-cli`) MUST have zero `git2`
# in their dep tree (issue #105 / slice 43-B / rust-systems Q1).
git-enrich = ["cfdb-petgraph/git-enrich"]
# Enables `cfdb enrich-metrics` real implementation — pulls syn + sha2.
# Default builds (`cargo build -p cfdb-cli`) MUST have zero `syn` in their
# dep tree (issue #203 / RFC-036 §3.3 / CP6).
quality-metrics = ["cfdb-petgraph/quality-metrics"]
# Sub-feature of `quality-metrics` that additionally populates
# `:Item.test_coverage` from cargo-llvm-cov JSON output (RFC-036 §3.3).
llvm-cov = ["cfdb-petgraph/llvm-cov", "quality-metrics"]

[dev-dependencies]
assert_cmd = "2"
