[package]
name = "cfdb-concepts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# cfdb-concepts — shared library for `.cfdb/concepts/*.toml` override loading
# and crate → bounded-context resolution.
#
# Extracted from `cfdb-extractor/src/context.rs` in Issue #3 to break a
# latent split-brain: two consumers (`cfdb-extractor` + the future
# `cfdb-query` DSL evaluator) would otherwise each embed their own
# `ContextMap` implementation. The shared crate is the single canonical
# TOML loader + prefix heuristic, consumed by both.
#
# Dependency discipline (Issue #3 AC): zero heavy deps. No `syn`, no
# `cargo_metadata`, no `ra-ap-hir`, no `thiserror`-via-workspace-wide
# chain. Pure TOML reader + serde deserialize + domain types. The
# rationale: `cfdb-query` must be able to depend on this crate without
# accidentally pulling in the 1M+ LoC HIR stack.

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
