[package]
name = "cfdb-extractor-php"
# Hardcoded for the standalone-build phase per issue #264 brief
# ("DO NOT touch Cargo.toml workspace members list. Integration
# handles that."). The integration PR that adds this crate to the
# workspace `members` array will replace these with `*.workspace =
# true` lines so the crate inherits the canonical version table.
version = "0.4.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

# RFC-041 Phase 2 / issue #264 — PHP `LanguageProducer` MVP.
#
# This crate is the PHP-specific reference implementation of the
# `cfdb_lang::LanguageProducer` trait. It walks a Composer-style PHP
# project (detector: `composer.json` at workspace root) via
# tree-sitter-php and emits the v0.1 cfdb fact set onto the existing
# closed-set schema vocabulary in `cfdb-core::schema::labels`.
#
# **Schema mapping decision (RFC-041 §4 Published Language invariant).**
# The closed-set `:Item.kind` values today are `struct` / `enum` /
# `trait` / `fn` / `impl_block` / `const` / `static` / `type` / `mod` —
# Rust-shaped. PHP's natural `class` / `interface` / `trait` /
# `method` / `function` / `namespace` are NOT in that set, and Phase 2
# is NOT a schema-RFC slice (no `cfdb-core::SchemaVersion` patch, no
# graph-specs lockstep). The MVP therefore maps:
#
#   PHP namespace          → :Module node (NOT :Item — :Module is a
#                            structural-context node already in the
#                            schema)
#   PHP class | interface  → :Item { kind: "trait" }
#         | trait            (closest fit — PHP traits ARE essentially
#                             Rust traits + classes are aggregations
#                             of trait-like contracts; mapping all
#                             three to the same kind keeps queries
#                             simple at the cost of homonymy)
#   PHP method | function  → :Item { kind: "fn" }
#   PHP const              → :Item { kind: "const" } (reserved; MVP
#                            does not yet emit class constants)
#
# This decision is visible in downstream cypher queries. The first
# follow-up RFC will introduce dedicated `:Item.kind` values for PHP
# (likely `class`, `interface`, `php_trait`) at a SchemaVersion bump.

[dependencies]
cfdb-core = { path = "../cfdb-core" }
cfdb-lang = { path = "../cfdb-lang" }
tree-sitter = "0.22"
tree-sitter-php = "0.22"
# Pinned during the standalone-build phase per issue #264 brief; the
# integration PR will switch this back to `thiserror.workspace = true`
# when the crate joins the workspace `members` array.
thiserror = "2"

[dev-dependencies]
tempfile = "3"

# Standalone-build phase per issue #264 brief — empty [workspace]
# table makes this crate ignore the parent `Cargo.toml`'s workspace
# membership list (which the integration PR will own). Allows
# `cargo check --manifest-path crates/cfdb-extractor-php/Cargo.toml`
# to compile without touching the parent manifest.
[workspace]
