[package]
name = "cfdb-extractor-ts"
version = "0.4.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

# Standalone-workspace opt-out (issue #265). The root workspace at
# `cfdb/Cargo.toml` declares its members as an explicit list — this crate
# is intentionally NOT in that list yet. The integration phase of META
# #266 / RFC-041 Phase 3 wires this crate into the root workspace and
# registers `TypeScriptProducer` in `cfdb-cli`'s `available_producers()`
# behind the `lang-typescript` feature gate; until then the empty
# `[workspace]` block here makes `cargo` treat this directory as its own
# workspace root so `cargo check --manifest-path crates/cfdb-extractor-ts/Cargo.toml`
# does not error with "current package believes it's in a workspace when
# it's not". This is a transitional shape only — integration removes the
# block and adds `crates/cfdb-extractor-ts` to the root members list.
[workspace]

[dependencies]
cfdb-core = { path = "../cfdb-core" }
# RFC-041 §3.3 — `cfdb-extractor-ts` is the TypeScript reference
# implementation of the `LanguageProducer` trait. The dep on
# `cfdb-lang` is unconditional from this crate; the *consumer*
# `cfdb-cli` makes its dep on `cfdb-extractor-ts` optional behind the
# `lang-typescript` feature so the slim build can drop the entire
# TypeScript producer stack.
cfdb-lang = { path = "../cfdb-lang" }
# Pinned at the minor level — tree-sitter 0.23 is the ABI-paired
# host for tree-sitter-typescript 0.23. tree-sitter 0.22 lacks the
# `From<LanguageFn> for Language` impl that
# `tree_sitter_typescript::LANGUAGE_TYPESCRIPT.into()` relies on
# (the latter ships LanguageFn constants only); the 0.22/0.23
# combination fails to compile. Bumping either independently
# risks a dual-grammar ABI mismatch — upgrade them together in
# a single chore PR.
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
