[package]
name = "cfdb-extractor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cfdb-core = { path = "../cfdb-core" }
cfdb-concepts = { path = "../cfdb-concepts" }
syn.workspace = true
# `span-locations` enables `proc_macro2::Span::start().line` so the
# extractor can report real source-line numbers instead of 0 (#273 /
# F-005). Without this, `Span::start()` is not even available and
# `:Item.line` / `:CallSite.line` are uniformly 0.
proc-macro2.workspace = true
cargo_metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
# RFC-040 §3.3 — `:ConstTable.entries_hash` is sha256 over the canonical-
# sorted entry sequence. The dep is workspace-known
# (`Cargo.toml:58`) but was not transitive through `cfdb-cli`'s
# persistence layer (R2 absorbed rust-systems B2 correction); a direct
# dep line on the extractor is the minimum-impact wiring.
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
