[package]
name = "cfdb-hir-extractor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# HIR-backed extractor — Phase B of RFC-029. Scaffold only in this crate
# as shipped by Issue #84; resolved :CallSite / CALLS / INVOKES_AT
# emission lands in Issue #85, :EntryPoint in Issue #86. See
# `src/lib.rs` for the object-safety constraint on `HirDatabase` that
# governs every public signature in this crate.
#
# NEVER add `cfdb-hir-extractor` as a direct dep of `cfdb-cli` or
# `cfdb-petgraph`. The adapter crate (`cfdb-hir-petgraph-adapter`,
# #85) is the single integration seam, and `cfdb-cli` picks it up only
# through the `hir` feature flag (#86). This isolates the 90-150s cold
# compile cost from the default `cargo build -p cfdb-cli`.

[dependencies]
cfdb-core = { path = "../cfdb-core" }
thiserror.workspace = true

# ra-analyzer HIR slice (=0.0.328 bundle — per workspace deps comment).
ra_ap_hir.workspace = true
ra_ap_hir_def.workspace = true
ra_ap_hir_ty.workspace = true
ra_ap_hir_expand.workspace = true
ra_ap_base_db.workspace = true
ra_ap_ide_db.workspace = true
ra_ap_syntax.workspace = true
ra_ap_vfs.workspace = true
ra_ap_project_model.workspace = true
ra_ap_proc_macro_api.workspace = true

# rustc internals (independent cadence — rust-systems C1).
ra-ap-rustc_type_ir.workspace = true
