[package]
name = "cfdb-petgraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cfdb-core = { path = "../cfdb-core" }
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
indexmap.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
