[package]
name = "cfdb-petgraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cfdb-core = { path = "../cfdb-core" }
# Concept-override loader + heuristic shared with cfdb-extractor; used by
# `enrich_bounded_context` (issue #108 / slice 43-E) to re-read
# `.cfdb/concepts/*.toml` at enrichment time and patch `:Item.bounded_context`
# when the TOML has changed between extractions. Single resolution point —
# the crate owns `compute_bounded_context` so extract-time and enrich-time
# paths cannot diverge.
cfdb-concepts = { path = "../cfdb-concepts" }
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
indexmap.workspace = true
# RFC-035 §3.2 / slice 1 (#180) — `.cfdb/indexes.toml` loader lives in
# `cfdb_petgraph::index::spec`. Workspace pin already restricts to
# `default-features = false, features = ["parse"]`; we only deserialise.
toml.workspace = true

# Optional git-history enrichment (issue #105 / slice 43-B). Gated behind the
# `git-enrich` feature so default builds do NOT pay the libgit2 cold-compile
# cost (rust-systems Q1 / Q6 — +20-35s estimated). `default-features = false`
# drops ssh/https/ssh_key_from_memory; the enrichment pass only reads the
# local filesystem, so none of those features are needed. `cargo build -p
# cfdb-cli` default-features MUST have zero `git2` in its dep tree.
git2 = { version = "0.20", default-features = false, optional = true }

# Optional quality-metrics enrichment (issue #203 / RFC-036 §3.3). Gated
# behind `quality-metrics` so default builds do NOT pay syn's parse cost
# for ~150k :Item nodes on large target workspaces. DIP constraint
# (RFC-036 CP6): `ast_signals.rs` parses syn directly from within
# cfdb-petgraph. Dep direction `cfdb-petgraph → cfdb-extractor` is
# forbidden.
syn = { workspace = true, optional = true }
# `dup_cluster_id` = sha256 of lex-sorted member qname set (CP5 /
# RFC-036 §3.3). Same crate already pulled in by cfdb-cli for
# extract-cache key hashing — net-zero workspace dep.
sha2 = { workspace = true, optional = true }

[features]
default = []
# Enables `PetgraphStore::enrich_git_history` real implementation; pulls
# git2. Without this feature, the method returns a clear error directing
# the caller to recompile with `--features git-enrich`.
git-enrich = ["dep:git2"]
# Enables `PetgraphStore::enrich_metrics` real implementation
# (issue #203 / RFC-036 §3.3). Without this feature, the method returns
# a clear warning directing the caller to recompile with
# `--features quality-metrics`.
quality-metrics = ["dep:syn", "dep:sha2"]
# Sub-feature of `quality-metrics` that additionally populates
# `:Item.test_coverage` from cargo-llvm-cov JSON output. Off by default
# so CI runs that do not invoke llvm-cov skip the coverage JSON ingest
# entirely. Excluded from G1 canonical-dump sha256 per G6 invariant
# (`SchemaVersion::V0_3_1` doc / RFC-036 §3.3).
llvm-cov = ["quality-metrics"]

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
# Used by `tests/pattern_b_vertical_split_brain.rs` (issue #44) to parse the
# `examples/queries/vertical-split-brain.cypher` rule text and execute it
# against a synthetic in-memory graph. Dev-only — the backend itself MUST
# NOT depend on the parser (see `tests/architecture_dep_rule.rs` /
# FORBIDDEN_DEPS).
cfdb-query = { path = "../cfdb-query" }
