[package]
name = "cfdb-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cfdb-core = { path = "../cfdb-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chumsky.workspace = true
regex.workspace = true
toml.workspace = true
