[package]
name = "cfdb-recall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cfdb-recall"
path = "src/bin/cfdb-recall.rs"

[dependencies]
cfdb-core = { path = "../cfdb-core" }
cfdb-extractor = { path = "../cfdb-extractor" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true
rustdoc-types = "0.56"
rustdoc-json = "0.9"

[dev-dependencies]
tempfile.workspace = true
