[package]
name = "check-prelude-triggers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "check_prelude_triggers"
path = "src/lib.rs"

[[bin]]
name = "check-prelude-triggers"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
