[package]
name = "dogfood-enrich"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "dogfood_enrich"
path = "src/lib.rs"

[[bin]]
name = "dogfood-enrich"
path = "src/main.rs"

[dependencies]
cfdb-core = { path = "../../crates/cfdb-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
