[package]
name = "spike-ladybugdb"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "spike-ladybugdb"
path = "src/main.rs"

[dependencies]
lbug = "=0.15.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[workspace]
# Standalone — do not join the parent qbot-core workspace.
